test/data/syntax-errors/bad-statement.gs
Str a = "p";
printes x;
9 - 2;
givesUs x;
